Added a basic header and some styles

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,21 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Genes</title>
+  <title>Kinship</title>
   <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
   <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
   <%= csrf_meta_tags %>
 </head>
 <body>
 
+<!-- Header -->
+<div id='top'>
+  <h1>Kinship</h1>
+</div>
+
 <%= yield %>
+
+<!-- Footer -->
 
 </body>
 </html>
