--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,13 +9,19 @@
 <body>
 
 <!-- Header -->
-<div id='top'>
-  <h1>Kinship</h1>
+<div id='header'>
+  <h1 id='site-title'>Kinship</h1>
+  <div id='user-box'><%= link_to "Sign In", '#', class:'header-link' %></div> <!-- If user is logged in, this should be replaced with user's username -->
 </div>
 
 <%= yield %>
 
+
 <!-- Footer -->
+<div id='footer'>
+	<hr />
+	<span id='powered-by'>Powered by Kinship</span>
+</div>
 
 </body>
 </html>
