--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,12 +7,16 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-
-<%= render 'layouts/header' %>
-<%= yield %>
-<%= render 'layouts/footer' %>
-<br />
-<%= debug(params) if Rails.env.development? %>
-
+	
+	<%= render 'layouts/header' %>
+	<div class='container'>
+		<% flash.each do |key, value| %>
+			<div class="alert alert-<%= key %>"><%= value %></div>
+		<% end %>
+		<%= yield %>
+	</div>
+	<%= render 'layouts/footer' %>
+	<br />
+	<%= debug(params) if Rails.env.development? %>
 </body>
 </html>
