more header/footer formatting changes

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,5 +1,7 @@
 <!-- Footer -->
-<div id='footer'>
+<footer class="footer">
+  <small>
 	<hr />
 	<span id='powered-by'>Powered by Kinship</span>
-</div>
+  </small>
+</footer>
