--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -7,7 +7,7 @@
         <ul class="nav pull-right">
           <li><%= link_to "Home",    '/static_pages/home' %></li>
           <li><%= link_to "Help",    '#' %></li>
-          <li><%= link_to "Sign in", '#', class:'header-link' %></li>
+          <li><%= link_to "Sign in", '#' %></li>
         </ul>
       </nav>
     </div>
