added formatting to signup page

--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,3 +1,4 @@
+<div class="center hero-unit">
 <h1>Request an Account</h1>
 <br />
 <div class="row">
@@ -20,4 +21,5 @@
 			<%= f.submit "Create my account", class: "btn btn-large btn-primary" %>
 		<% end %>
 	</div>
+</div>
 </div>
