changed footer format

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,7 +1,6 @@
 <!-- Footer -->
 <footer class="footer">
   <small>
-	<hr />
-	<span id='powered-by'>Powered by Kinship</span>
+	Powered by Kinship
   </small>
 </footer>
