--- a/app/views/admin/users.html.erb
+++ b/app/views/admin/users.html.erb
@@ -1,1 +1,19 @@
-<h1>Admin#users</h1>
+<h1>Admin - Users</h1>
+<table class="table table-striped">
+	<tr>
+		<th>Username</th>
+		<th>Email</th>
+		<th>Role</th>
+		<th>Edit</th>
+		<th>Delete</th>
+	</tr>
+	<% User.all.each do |user| %>
+		<tr>
+			<td><%= user.username %></td>
+			<td><%= user.email %></td>
+			<td><%= 'nothing yet'%></td>
+			<td><%= link_to user_path(user), :class=>'btn' do %><i class="icon-edit"></i><% end %></td>
+			<td><a class="btn btn-danger <%= 'disabled' if user.username == 'admin'%>"><i class="icon-trash"></i></a></td>
+		</tr>
+	<% end %>
+</table>
