Created semi-functional role dropdowns
I also updated the user controller to display a more appropriate
message, reflecting the fact that accounts must be approved.

--- a/app/views/admin/users.html.erb
+++ b/app/views/admin/users.html.erb
@@ -11,7 +11,19 @@
 		<tr class="<%= 'warning' if user.role == User::ROLE_UNAPPROVED %>" >
 			<td><%= user.username %></td>
 			<td><%= user.email %></td>
-			<td><%= user.role %></td> <!-- This should be a drop down -->
+			<td>
+				<div class="btn-group">
+					<a class='btn dropdown-toggle' data-toggle="dropdown" href="#">
+						<%= user.role %>
+						<span class="caret"></span>
+					</a>
+					<ul class="dropdown-menu">
+						<% User::ROLES.each  do |role| %>
+							<li class="<%= 'active' if role == user.role%>"><a><%= role %></a></li>
+						<% end %>
+					</ul>
+				</div>
+			</td>
 			<td><%= link_to edit_user_path(user), :class=>'btn' do %><i class="icon-edit"></i><% end %></td>
 			<td><a class="btn btn-danger <%= 'disabled' if user.username == 'admin'%>"><i class="icon-trash"></i></a></td>
 		</tr>
