--- a/app/views/people/index.html.erb
+++ b/app/views/people/index.html.erb
@@ -3,8 +3,7 @@
 <table class="table table-striped">
   <thead>
     <tr>
-      <th>First name</th>
-      <th>Last name</th>
+      <th>Name</th>
       <th>Gender</th>
       <th>Portrait</th>
       <th></th>
@@ -16,10 +15,9 @@
   <tbody>
     <% @people.each do |person| %>
       <tr>
-        <td><%= person.first_name %></td>
-        <td><%= person.last_name %></td>
+        <td><%= link_to "#{person.first_name} #{person.last_name}", person%></td>
         <td><%= person.gender %></td>
-        <td><%= image_tag person.photo.url(:small) %></td>
+        <td><%= link_to image_tag(person.photo.url(:small)), person %></td>
         <td><%= link_to 'Edit', edit_person_path(person) %></td>
         <td><%= link_to 'Destroy', person, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
