--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -9,6 +9,7 @@
           <li><%= link_to "Help", '#' %></li>
           <% if signed_in? %>
             <li><%= link_to "Users", '#' %></li>
+            <li><%= link_to "People", people_path %></li>
             <li id="fat-menu" class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown">
                 Account <b class="caret"></b>
