--- a/app/views/people/show.html.erb
+++ b/app/views/people/show.html.erb
@@ -3,23 +3,13 @@
 <%= image_tag @person.photo.url(:small) %>
 
 <p>
-  <strong>First name:</strong>
-  <%= @person.first_name %>
-</p>
-
-<p>
-  <strong>Last name:</strong>
-  <%= @person.last_name %>
+  <strong>Name:</strong>
+  <%= @person.first_name %> <%=@person.last_name%>
 </p>
 
 <p>
   <strong>Gender:</strong>
   <%= @person.gender %>
-</p>
-
-<p>
-  <strong>Portrait link:</strong>
-  <%= @person.portrait_link %>
 </p>
 
 
