added default profile photo for person.  Made Name and gender mandatory

--- a/app/views/people/_form.html.erb
+++ b/app/views/people/_form.html.erb
@@ -21,7 +21,7 @@
   </div>
   <div class="field">
     <%= f.label :gender %><br>
-    <%= f.select :gender, options_for_select({'M' => 'M','F' => 'F'}) %>
+    <%= f.select :gender, options_for_select({'' => nil,'M' => 'M','F' => 'F'}) %>
   </div>
   <div class="field">
     <%= f.label :photo %><br>
