Fixed glitch in New Person button of people index

--- a/app/views/people/_form.html.erb
+++ b/app/views/people/_form.html.erb
@@ -28,6 +28,6 @@
     <%= f.file_field :photo %>
   </div>
   <div class="actions">
-    <%= f.submit %>
+    <%= button_tag 'Submit', :class => 'btn' %>
   </div>
 <% end %>
