--- a/app/views/admin/look_and_feel.html.erb
+++ b/app/views/admin/look_and_feel.html.erb
@@ -4,6 +4,9 @@
 	<dt><%= label_tag :blurb, "Homepage Blurb" %></dt>
 	<dd><%= text_area_tag :blurb, @blurb, :rows =>10 %></dd>
 
+	<dt><%= label_tag :eventsFormat, "Events Format" %></dt>
+	<dd><%= select_tag :eventsFormat, options_for_select(["timeline", "data-list"], @eventsFormat)%></dd>
+
 	<%= submit_tag 'Save' %>
 <% end %>
 </dl>
