--- a/app/views/people/show.html.erb
+++ b/app/views/people/show.html.erb
@@ -1,14 +1,34 @@
 <p id="notice"><%= notice %></p>
 
-<h3> <%= @person.first_name %> <%=@person.last_name%> </h3>
+<div class="row">
+	<%= image_tag @person.photo.url(:small), class: 'span3' %>
+	<div class="span9">
+		<h3> <%= @person.first_name %> <%=@person.last_name%> </h3>
 
-<%= image_tag @person.photo.url(:small) %>
-
-<p>
-  <strong>Gender:</strong>
-  <%= @person.gender %>
-</p>
+		<p>
+		  <strong>Gender:</strong>
+		  <%= @person.gender %>
+		</p>
 
 
-<%= link_to 'Edit', edit_person_path(@person) %> |
-<%= link_to 'Back', people_path %>
+		<%= link_to 'Edit', edit_person_path(@person) %> |
+		<%= link_to 'Back', people_path %>
+	</div>
+</div>
+
+<div id="facts-box">
+	<% if @eventsFormat == 'data-list' %>
+		<dl class="dl-horizontal">
+			<dt>Event Name</dt>
+			<dd>Event details</dd>
+		</dl>
+	<% elsif @eventsFormat == 'timeline' %>
+		<table>
+			<tr>
+				<td class="span3">Event Name</td>
+				<td class="span1"><i class='icon-glass'></i></td>
+				<td class="span8">Event Details</td>
+			</tr>
+		</table>
+	<% end %>
+</div>
