--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -8,23 +8,8 @@
           <li><%= link_to "Home", root_path %></li>
           <li><%= link_to "Help", '#' %></li>
           <% if signed_in? %>
-            <li><%= link_to "Users", '#' %></li>
-            <li><%= link_to "People", people_path %></li>
-            <li id="fat-menu" class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                Account <b class="caret"></b>
-              </a>
-              <ul class="dropdown-menu">
-                <li><%= link_to "Profile", current_user %></li>
-                <li><%= link_to "My Account", edit_user_path(current_user) %></li>
-                <% if user_role?(User::ROLE_ADMIN) %>
-                <li class="divider"></li>
-                <li><%= link_to "Admin", admin_path %></li>
-                <% end %>
-                <li class="divider"></li>
-                <li><%= link_to "Sign out", signout_path, method: "delete" %></li>
-              </ul>
-            </li>
+            <%= render 'layouts/navigation_dropdown' %>
+            <%= render 'layouts/account_dropdown' %>
           <% else %>
             <li><%= link_to "Sign in", signin_path %></li>
           <% end %>
