Added Site Header to "Look and Feel".  Got rid of link highlight, and logo capitalization

--- a/app/views/people/index.html.erb
+++ b/app/views/people/index.html.erb
@@ -40,4 +40,4 @@
 
 <br>
 
-<%= button_to "New Person", new_person_path, :class => 'btn btn-primary' %>
+<%= link_to new_person_path, :class => 'btn btn-primary' do %>Add Person <i class="icon-plus icon-white"></i><%end%>
