--- a/app/views/admin/look_and_feel.html.erb
+++ b/app/views/admin/look_and_feel.html.erb
@@ -7,6 +7,8 @@
 	<dt><%= label_tag :eventsFormat, "Events Format" %></dt>
 	<dd><%= select_tag :eventsFormat, options_for_select(["timeline", "data-list"], @eventsFormat)%></dd>
 
+	<dt><%= label_tag :site_header, "Site Header" %></dt>
+	<dd><%= text_field_tag :site_header, @site_header%></dd>
 	<%= submit_tag 'Save' %>
 <% end %>
 </dl>
