Got basic birth stuff working This includes:   created the model   associated it with the child person   added a field in the edit/create form for birthdate

--- a/app/views/people/show.html.erb
+++ b/app/views/people/show.html.erb
@@ -9,6 +9,7 @@
 		  <strong>Gender:</strong>
 		  <%= @person.gender %>
 		</p>
+		<p>Birth date: <%= @person.birth.date %> </p>
 
 
 		<%= link_to 'Edit', edit_person_path(@person) %> |
