--- a/app/views/people/_form.html.erb
+++ b/app/views/people/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for @person, :html => { :multipart => true} do |f| %>
+<%= form_for setup_person(@person), :html => { :multipart => true} do |f| %>
   <% if @person.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@person.errors.count, "error") %> prohibited this person from being saved:</h2>
@@ -23,6 +23,12 @@
     <%= f.label :gender %><br>
     <%= f.select :gender, options_for_select({'' => nil,'M' => 'M','F' => 'F'}) %>
   </div>
+  <%= f.fields_for :birth do |ff| %>
+    <div>
+      <%= ff.label :date %>
+      <%= ff.date_field :date %>
+    </div>
+  <% end %>
   <div class="field">
     <%= f.label :photo %><br>
     <%= f.file_field :photo %>
