Fixed all broken rspec tests

--- a/app/views/people/show.html.erb
+++ b/app/views/people/show.html.erb
@@ -1,9 +1,9 @@
 <p id="notice"><%= notice %></p>
 
 <div class="row">
-	<%= image_tag @person.photo.url(:small), class: 'span3' %>
+	<%= image_tag @person.photo.url(:small), id: 'photo', class: 'span3' %>
 	<div class="span9">
-		<h3> <%= @person.full_name %> </h3>
+		<h3 id='full_name'> <%= @person.full_name %> </h3>
 
 		<p>
 		  <strong>Gender:</strong>
