--- a/app/views/people/_form.html.erb
+++ b/app/views/people/_form.html.erb
@@ -21,7 +21,7 @@
   </div>
   <div class="field">
     <%= f.label :gender %><br>
-    <%= f.collection_select :gender, [''] + Person.all_genders, :upcase, :upcase %>
+    <%= f.collection_select :gender, [' '] + Person.all_genders, :to_str, :to_str %>
   </div>
   <%= f.fields_for :birth do |ff| %>
     <div>
