--- a/app/views/layouts/_navigation_dropdown.html.erb
+++ b/app/views/layouts/_navigation_dropdown.html.erb
@@ -5,5 +5,6 @@
 	<ul class="dropdown-menu">
 		<li><%= link_to "People", people_path %></li>
 		<li><%= link_to "Places", places_path %></li>
+		<li><%= link_to "Statistcs", people_stats_path %></li>
 	</ul>
 </li>
