--- a/app/views/people/show.html.erb
+++ b/app/views/people/show.html.erb
@@ -30,7 +30,7 @@
   <li class="active"><a href="#events-tab" data-toggle="tab">Events</a></li>
   <li><a href="#family-tab" data-toggle="tab">Family</a></li>
   <li><a href="#tree-tab" data-toggle="tab">Tree</a></li>
-  <li><a href="#map-tab" data-toggle="tab">Map</a></li>
+  <li><a href="#map-tab" data-toggle="tab" id="map-tab-link">Map</a></li>
 </ul>
 
 <div id="tabs" class="tab-content">
@@ -223,30 +223,28 @@
   </div>
 
   <div id="map-tab" class="tab-pane">
-    
-  </div>
-</div>
-<style>
+    <style>
     #map {
-      width: 500px;
       height: 500px;
     }
     </style>
-    lat: <%= @person.birth.place.lat %><br/>
-    lon: <%= @person.birth.place.lon %><br/>
-
-
-    <div id='map'></div>
-
+    <script>
+      $("body").on('shown','#map-tab-link', function() { 
+        map.invalidateSize(false);
+      });
+    </script>
+  
     <%= 
       map(:center => {
           :latlng => [@person.birth.place.lat, @person.birth.place.lon],
-          :zoom => 0
+          :zoom => 3
       },
       :markers => [
-        {
-          :latlng => [@person.birth.place.lat, @person.birth.place.lon]
-        }
+        {:latlng => [@person.birth.place.lat, @person.birth.place.lon] }
       ]) 
     %>
+    
+  </div>
+</div>
+    
 
