--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -99,3 +99,33 @@ footer {
     }
   }
 }
+
+/* Custom Icons */
+i.icon-baby {
+  background-image: url("baby-24.png");
+  background-position: 0, 0;
+  height: 24px;
+  width: 24px;
+}
+
+i.icon-cemetery {
+  background-image: url("cemetery-24.png");
+  background-position: 0, 0;
+  height: 24px;
+  width: 24px;
+}
+
+i.icon-college {
+  background-image: url("college-24.png");
+  background-position: 0, 0;
+  height: 24px;
+  width: 24px;
+}
+
+i.icon-rings {
+  background-image: url("rings-24.png");
+  background-position: 0, 0;
+  height: 24px;
+  width: 24px;
+}
+
