--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -7,6 +7,7 @@
         <ul class="nav pull-right">
           <li><%= link_to "Home", root_path %></li>
           <li><%= link_to "Help", help_path %></li>
+          <li><%= link_to "About", about_path %></li>
           <% if signed_in? %>
             <%= render 'layouts/navigation_dropdown' %>
             <%= render 'layouts/account_dropdown' %>
