Added browser title for certain pages

--- a/app/views/people/index.html.erb
+++ b/app/views/people/index.html.erb
@@ -1,3 +1,4 @@
+<% provide(:title, "Person Index") %>
 <h1>Person Index</h1>
 
 <%= form_tag people_path, :method => :get, :id => 'gender_form' do %>
