Added 'Back to Index' link for person show

--- a/app/views/people/show.html.erb
+++ b/app/views/people/show.html.erb
@@ -175,5 +175,7 @@
     
   </div>
 </div>
-    
-
+<br><br><br>    
+<%= link_to people_path, :class => 'btn btn-info' do %>
+  <i class="icon-arrow-left icon-white"></i> Back to Person Index
+<% end %>
