--- a/app/views/people/show.html.erb
+++ b/app/views/people/show.html.erb
@@ -8,7 +8,7 @@
 	<div class="span9">
 		<h3 id='full_name'> <%= @person.full_name %> (<%= @person.gender %>)</h3> 
 
-		<p>Birth date: <%= @person.birth.date %></p>
+		<p>Birth date: <%= @person.birth.date.strftime('%B %-d, %-Y') %></p>
     <% if !@person.alive? %>
       <p>Death date: <%= @person.death.date %><%= " (age: " + @person.age.to_s + ")"%></p>
     <% end %>
