--- a/app/views/people/show.html.erb
+++ b/app/views/people/show.html.erb
@@ -10,7 +10,7 @@
 
 		<p>Birth date: <%= @person.birth.date.strftime('%B %-d, %-Y') %></p>
     <% if !@person.alive? %>
-      <p>Death date: <%= @person.death.date %><%= " (age: " + @person.age.to_s + ")"%></p>
+      <p>Death date: <%= @person.death.date.strftime('%B %-d, %-Y') %><%= " (age: " + @person.age.to_s + ")"%></p>
     <% end %>
     <% if @spouse%>
       <p>Spouse: <%= link_to @spouse.full_name, @spouse %></p>
