--- a/app/views/help/new.html.erb
+++ b/app/views/help/new.html.erb
@@ -3,8 +3,10 @@
 
 <h4>FAQs:</h4>
 <ul>
-<li>How do I get an account?</li>
-<li>Now that I've made a person, how do I link it to my account?</li>
+<li><b>How do I get an account?</b></li>
+<p>Simply request one from the <%= link_to "Request Account", signup_path %> page.</p>
+<li><b>Now that I've made a person, how do I link it to my account?</b></li>
+<p>This is something only an admin can do, so you can use this form to contact the admin and request the change.</p>
 </ul>
 <br>
 <br>
